🔧 #3 スレッド返信機能の環境変数設定を追加

--- a/example/echo-bot/.env.example
+++ b/example/echo-bot/.env.example
@@ -2,3 +2,5 @@
 # Discord Developer Portalからボットを作成し、トークンを取得してください
 # https://discord.com/developers/applications
 DISCORD_TOKEN=your_token_here
+# メンションされた場合にスレッドで返信するかどうか（true/false）
+USE_THREAD_REPLY=false
